--- a/Readme
+++ b/Readme
@@ -1,4 +1,4 @@
-"" FIRMWARE APPLICATION FOR ESP32 DEV-KIT-V1 THAT USES SPIFFS FOR FILE SAVING AND HTTPS FOR FILE DOWNLOAD VIA HTTPS PROTOCOL. ""
+# FIRMWARE APPLICATION FOR ESP32 DEV-KIT-V1 THAT USES SPIFFS FOR FILE SAVING AND HTTPS FOR FILE DOWNLOAD VIA HTTPS PROTOCOL. ""
   ##Prerequrisits: 
     1. ESP32 Plugin for Arduino IDE 
     2. SPIFFS File system 
