--- a/Readme
+++ b/Readme
@@ -1,7 +1,8 @@
 # FIRMWARE APPLICATION FOR ESP32 DEV-KIT-V1 THAT USES SPIFFS FOR FILE SAVING AND HTTPS FOR FILE DOWNLOAD VIA HTTPS PROTOCOL 
 
-[My Video Tutorials](https://drive.google.com/drive/u/1/folders/1sDHBQAxutHWzhlY8MnNhDF_fwrui1atU)
-    Check above link for my video explaining everything.
+My Video Tutorials:
+    (https://drive.google.com/drive/u/1/folders/1sDHBQAxutHWzhlY8MnNhDF_fwrui1atU)
+    Check above link for my videos explaining whole project.
 
 Prerequrisits: 
     1. ESP32 Plugin for Arduino IDE 
