--- a/Readme
+++ b/Readme
@@ -2,7 +2,7 @@
 
 Check my Project Videos:
     (https://drive.google.com/drive/u/1/folders/1sDHBQAxutHWzhlY8MnNhDF_fwrui1atU)
-    Check above link for my videos explaining whole project.
+    Check above link where I create and explain the whole project.
 
 Prerequrisits: 
     1. ESP32 Plugin for Arduino IDE 
