--- a/Readme
+++ b/Readme
@@ -1,4 +1,5 @@
 # FIRMWARE APPLICATION FOR ESP32 DEV-KIT-V1 THAT USES SPIFFS FOR FILE SAVING AND HTTPS FOR FILE DOWNLOAD VIA HTTPS PROTOCOL 
+    NOTE: Version 2 is just the updated and advance version of version-1 with new programs
 
 Check my Project Videos:
     (https://drive.google.com/drive/u/1/folders/1sDHBQAxutHWzhlY8MnNhDF_fwrui1atU)
