--- a/Readme
+++ b/Readme
@@ -31,7 +31,8 @@ NOTE: After everything is set. You can directly select you ESP32 development boa
 FOOTNOTES: This project contains version-1 and version-2. 
 Version 2 is updated version of version 1 that contains larger buffer for larger payload data for HTTPS GET request.
 
-This is the version on of the project that contains basic blueprint like structrue for the Final project, which is version-2.
+Early prototype is the version on of the project that contains basic blueprint like structrue for the Final project, which is version-2. The system design and program structrue 
+is same in both, but the program implementation and structrue changes.
 
 Includes the below libraries/header files & their functions in the code.
   #include "FS.h"
