--- a/Readme
+++ b/Readme
@@ -31,7 +31,7 @@ Project Description
     - Implemented SPIFFS(SPI-Flash File system) that creates files for storage of packet data.
     - The project is implemented using ESP32 Plugin for Arduino IDE & SPI-Flash file system.
 
-PDF:
+SPIFFS Limitations Casestudy PDF:
     I also wrote PDF for this project that explains the frequency bottlenecks & latency issues in SPIFFS. 
     It details the performance limits of SPIFFS and how it affects this project.
 
