--- a/Readme
+++ b/Readme
@@ -12,7 +12,7 @@
     NOTE: Version-2 is just the updated and advance version of Version-1 with new programs
 
 
-Check my Project Videos:
+Check my Project Video:
     (https://drive.google.com/drive/u/1/folders/1sDHBQAxutHWzhlY8MnNhDF_fwrui1atU)
     Check above link where I create and explain the whole project.
 
