Update project title formatting in Readme

--- a/Readme
+++ b/Readme
@@ -1,5 +1,5 @@
 
----------------------------------------- PROJECT FOR VICHARAK COMPUTERS -----------------------------------------
+# ---------------------------------------- PROJECT FOR VICHARAK COMPUTERS -----------------------------------------
 
 
 
